--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DistribucionContext": "Host=127.0.0.1;Port=5433;Database=Distribucion;Username=postgres;Password=ale12345",
+    "DistribucionContext": "",
   }
 }
