--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DistribucionContext": "",
+    "DistribucionContext": "Host=localhost;Port=5433;Database=Distribucion;Username=postgres;Password=ale12345"
   }
 }
